--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,6 +1,9 @@
+<div class="row">
+  <div class="col-6">
+
 <%= form_with(model: message, local: true) do |f| %>
    <% if message.errors.any? %>
-    <div id="error_explanation">
+    <div id="error_explanation" class="alert alert-warning">
       <ul>
         <% message.errors.full_messages.each do |msg| %>
           <li><%= msg %></li>
@@ -9,11 +12,28 @@
     </div>
    <% end %>
   
-  <%= f.label :title, "タイトル" %>
-  <%= f.text_field :title %>
-  
-  <%= f.label :content, 'メッセージ' %>
-  <%= f.text_field :content %>
+  <div class="form-group">
+    
+<%= f.label :title, 'タイトル' %>
 
-  <%= f.submit '投稿' %>
+    
+<%= f.text_field :title, class: 'form-control' %>
+
+  </div>
+
+  <div class="form-group">
+    
+<%= f.label :content, 'メッセージ' %>
+
+    
+<%= f.text_field :content, class: 'form-control' %>
+
+  </div>
+
+  
+<%= f.submit '投稿', class: 'btn btn-primary' %>
+
 <% end %>
+
+  </div>
+</div>
